--- a/L6.ipynb
+++ b/L6.ipynb
@@ -73,11 +73,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fp=\"dataset/Stockholm_continuous_final.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read data using varying amount of spaces as separator and specifying * characters as NoData values\n",
     "# And don't worry about the warning message generated when running this cell\n",
     "data = pd.read_csv(\n",
     "    fp, delim_whitespace=True, na_values=[\"*\", \"**\", \"***\", \"****\", \"*****\", \"******\"]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\n",
+    "    fp, sep=r'\\s+', na_values=[\"*\", \"**\", \"***\", \"****\", \"*****\", \"******\"]\n",
+    ")\n"
    ]
   },
   {
@@ -135,7 +155,7 @@
     "# Read in only selected columns\n",
     "data = pd.read_csv(\n",
     "    fp,\n",
-    "    delim_whitespace=True,\n",
+    "    sep=r'\\s+',\n",
     "    usecols=[\"YRMODAHRMN\",\"Temperature\", \"Precipitation\",\"City\"],\n",
     "    na_values=[\"*\", \"**\", \"***\", \"****\", \"*****\", \"******\"],\n",
     ")\n",
@@ -258,7 +278,7 @@
    "source": [
     "### Check your understanding\n",
     "\n",
-    "The temperature values in our data files are again in Fahrenheit. As you might guess, we will soon convert these temperatures in to Celsius. In order to avoid confusion with the columns, let's rename the column `TEMP` to `TEMP_F`. Let's also rename `USAF` to `STATION_NUMBER`."
+    "The temperature values in our data files are again in Fahrenheit. As you might guess, we will soon convert these temperatures in to Celsius. In order to avoid confusion with the columns, let's rename the column `Temp_average` to `TEMP_F`. Let's also rename `USAF` to `STATION_NUMBER`."
    ]
   },
   {
@@ -273,7 +293,7 @@
    "source": [
     "# Solution\n",
     "# Create the dictionary with old and new names\n",
-    "new_names = { \"Temp_Average\": \"Temp_Average_F\"}\n",
+    "new_names = { \"Temp_Average\": \"TEMP_F\"}\n",
     "\n",
     "# Rename the columns\n",
     "data = data.rename(columns=new_names)\n",
@@ -482,7 +502,7 @@
     "    print(f\"Index: {idx}\")\n",
     "\n",
     "    # Print the row\n",
-    "    print(f\"Temp F: {row['Temp_Average_F']}\\n\")\n",
+    "    print(f\"Temp F: {row['TEMP_F']}\\n\")\n",
     "\n",
     "    break"
    ]
@@ -521,7 +541,7 @@
     "for idx, row in data.iterrows():\n",
     "\n",
     "    # Convert the Fahrenheit to Celsius\n",
-    "    celsius = fahr_to_celsius(row[\"Temp_Average_F\"])\n",
+    "    celsius = fahr_to_celsius(row[\"TEMP_F\"])\n",
     "\n",
     "    # Update the value of 'Celsius' column with the converted value\n",
     "    data.at[idx, \"TEMP_C\"] = celsius"
@@ -560,7 +580,7 @@
    "source": [
     "### Applying the function\n",
     "\n",
-    "pandas DataFrames and Series have a dedicated method `.apply()` for applying functions on columns (or rows!). When using `.apply()`, we pass the function name (without parentheses!) as an argument to the `apply()` method. Let's start by applying the function to the `Temp_Average_F` column that contains the temperature values in Fahrenheit."
+    "pandas DataFrames and Series have a dedicated method `.apply()` for applying functions on columns (or rows!). When using `.apply()`, we pass the function name (without parentheses!) as an argument to the `apply()` method. Let's start by applying the function to the `TEMP_F` column that contains the temperature values in Fahrenheit."
    ]
   },
   {
@@ -569,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[\"Temp_Average_F\"].apply(fahr_to_celsius)"
+    "data[\"TEMP_F\"].apply(fahr_to_celsius)"
    ]
   },
   {
@@ -585,7 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[\"TEMP_C\"] = data[\"Temp_Average_F\"].apply(fahr_to_celsius)"
+    "data[\"TEMP_C\"] = data[\"TEMP_F\"].apply(fahr_to_celsius)"
    ]
   },
   {
@@ -593,31 +613,6 @@
    "metadata": {},
    "source": [
     "We can also apply the function on several columns at once. Furthermore, we can re-order the dataframe at the same time."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Check your understanding\n",
-    "\n",
-    "Convert `'Temp_Average_F'`, to Celsius by applying the function like we did above and store the outputs to  new columns `'TEMP_C'`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# Solution\n",
-    "data[[\"TEMP_C\"]] = data[[\"Temp_Average_F\"]].apply(\n",
-    "    fahr_to_celsius\n",
-    ")"
    ]
   },
   {
@@ -755,7 +750,7 @@
    "source": [
     "### String slicing\n",
     "\n",
-    "Now that we have converted the date and time information into character strings, we next need to \"cut\" the needed information from the [string objects](https://docs.python.org/3/tutorial/introduction.html#strings). If we look at the latest time stamp in the data (`201910012350`), you can see that there is a systematic pattern `YEAR-MONTH-DAY-HOUR-MINUTE`. Four first characters represent the year, and six first characters are year and month!"
+    "Now that we have converted the date and time information into character strings, we next need to \"cut\" the needed information from the [string objects](https://docs.python.org/3/tutorial/introduction.html#strings). If we look at the latest time stamp in the data (`202012310348`), you can see that there is a systematic pattern `YEAR-MONTH-DAY-HOUR-MINUTE`. Four first characters represent the year, and six first characters are year and month!"
    ]
   },
   {
@@ -764,7 +759,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date = \"201801010926\" \n",
+    "date = \"202012310348\" \n",
     "date[0:6]"
    ]
   },
@@ -1024,7 +1019,7 @@
     "We can do that by using the `mean()` function that we already did during Lesson 5. Let's calculate the mean for following attributes all at once:\n",
     "\n",
     "- `PRECIP`\n",
-    "- `Temp_Average_F`\n",
+    "- `TEMP_F`\n",
     "- `TEMP_C`\n",
     "- `MONTH`\n"
    ]
@@ -1041,7 +1036,7 @@
    "outputs": [],
    "source": [
     "# Specify the columns that will be part of the calculation\n",
-    "mean_cols = [\"PRECIP\", \"Temp_Average_F\", \"TEMP_C\"]\n",
+    "mean_cols = [\"PRECIP\", \"TEMP_F\", \"TEMP_C\"]\n",
     "\n",
     "# Calculate the mean values all at one go\n",
     "mean_values = group1[mean_cols].mean()\n",
@@ -1103,7 +1098,7 @@
     "monthly_data = pd.DataFrame()\n",
     "\n",
     "# The columns that we want to aggregate\n",
-    "mean_cols = [\"PRECIP\", \"Temp_Average_F\", \"TEMP_C\"]\n",
+    "mean_cols = [\"PRECIP\", \"TEMP_F\", \"TEMP_C\"]\n",
     "\n",
     "# Iterate over the groups\n",
     "for key, group in grouped:\n",
@@ -1170,6 +1165,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Julys = data[data[\"MONTH\"] == \"07\"]"
    ]
   },
@@ -1186,7 +1190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Julys = Julys[[ \"Temp_Average_F\", \"TEMP_C\", \"YEAR_MONTH\"]]"
+    "Julys = Julys[[ \"TEMP_F\", \"TEMP_C\", \"YEAR_MONTH\"]]"
    ]
   },
   {
@@ -1243,7 +1247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monthly_mean.sort_values(by=\"TEMP_C\", ascending=False).head(10)"
+    "monthly_mean.sort_values(by=\"TEMP_C\", ascending=True).head()"
    ]
   },
   {
@@ -1340,7 +1344,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_list = glob.glob(r\"D:/Teaching_Development/Python_1_course_VT24/missing lecture/dataset/*txt\")"
+    "##adjust the filepath\n",
+    "file_list = glob.glob(\"dataset/*txt\")"
    ]
   },
   {
@@ -1480,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
